--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "2.4.8",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
