--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "2.4.8",
     "expo": "~48.0.15",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
